# redox_lib_gen

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  update_snapshots.sh
.github/workflows/: handle_updates.yml  test_and_coverage.yml
redox_lib_gen/: README.md  __init__.py  generate.py  pull_request.py  utils.py
redox_lib_gen/gen_helpers/: __init__.py  common_klasses.py  constants.py  empty_klass.py  get_spec.py  name_map.py  parse_spec.py  sub_types.py  types.py  utils.py  write_lib_files.py
redox_lib_gen/templates/: generics.jinja2  template-resource.jinja2
redox_lib_gen/tests/snapshots/: snap_e2e_test_libgen.py
redox_parser_gen/: pull_request.py  pytest.ini
redox_parser_gen/gen_helpers/: common_klasses.py  get_spec.py  parse_spec.py  sub_types.py  write_lib_files.py
redox_parser_gen/templates/: generics.jinja2  template-resource.jinja2
tests/: e2e_test_libgen.py  file.py  no_spaces.py  test_libgen.py  test_redox_lib_gen.py  test_redox_types.py  unit_test_redox_types.py
tests/snapshots/: common_types.py  snap_test_libgen.py  snap_test_redox_lib_gen.py
tests/snapshots/claim/: payment.py  paymentbatch.py  submission.py  submissionbatch.py
tests/snapshots/clinicaldecisions/: request.py  response.py
tests/snapshots/clinicalsummary/: documentget.py  documentgetresponse.py  documentquery.py  documentqueryresponse.py  patientpush.py  patientquery.py  patientqueryresponse.py  visitpush.py  visitquery.py  visitqueryresponse.py
tests/snapshots/device/: new.py
tests/snapshots/enrichment/: naturallanguageprocessingquery.py  naturallanguageprocessingqueryresponse.py  normalizationquery.py  normalizationqueryresponse.py
tests/snapshots/financial/: accountupdate.py  transaction.py
tests/snapshots/flowsheet/: new.py
tests/snapshots/generic/: Claim.py  ClinicalDecisions.py  ClinicalSummary.py  Device.py  Enrichment.py  Financial.py  Flowsheet.py  Inventory.py  Media.py  Medications.py  Notes.py  Order.py  Organization.py  PatientAdmin.py  PatientEducation.py  PatientSearch.py  Provider.py  Referral.py  Research.py  Results.py  SSO.py  Scheduling.py  SurgicalScheduling.py  Vaccination.py  types.py
tests/snapshots/inventory/: deplete.py  update.py
tests/snapshots/media/: delete.py  new.py  queryresponse.py  replace.py
tests/snapshots/medications/: administration.py  cancel.py  new.py  update.py
tests/snapshots/notes/: delete.py  new.py  query.py  queryresponse.py  replace.py
tests/snapshots/order/: cancel.py  groupedorders.py  new.py  query.py  queryresponse.py  update.py
tests/snapshots/organization/: new.py  query.py  queryresponse.py  update.py
tests/snapshots/patientadmin/: arrival.py  cancel.py  censusquery.py  censusqueryresponse.py  discharge.py  newpatient.py  patientmerge.py  patientupdate.py  preadmit.py  registration.py  transfer.py  visitmerge.py  visitquery.py  visitqueryresponse.py  visitupdate.py
tests/snapshots/patienteducation/: delete.py  new.py  update.py
tests/snapshots/patientsearch/: locationquery.py  locationqueryresponse.py  query.py  (+1 more)
(+91 files in other folders)
