[tool.poetry]
name = "redox_lib_gen"
version = "0.1.0a1"
description = ""
authors = ["Mike Mabey <mike.mabey@cedar.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8"
requests = "^2.27.1"
retry2 = "^0.9.3"
inflection = "^0.5.1"
Jinja2 = "^3"
tox = "^3.25.0"
coveralls = "^3.3.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7"
snapshottest = "^0.6.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--ignore tests/snapshots/"

[tool.isort]
known_third_party = ["click", "gen_helpers", "inflection", "jinja2", "pydantic", "pytest", "requests", "retry", "snapshottest"]
multi_line_output = 3
profile = "black"
combine_as_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py310

[tox:.package]
basepython = python3

[testenv]
deps =
    pytest
    coveralls
    snapshottest
commands =
    coverage run --source redox_lib_gen -m pytest
"""
