[tool.poetry]
name = "redox_lib_gen"
version = "0.1.0-alpha.1"
description = ""
authors = ["Mike Mabey <mike.mabey@cedar.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8"
requests = "^2.31"
retry2 = "^0.9.3"
inflection = "^0.5.1"
Jinja2 = "^3"
ufmt = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-snapshot = "^0.9.0"
pre-commit = "^3.1"
tox = "^4.4"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--ignore tests/snapshots/"

[tool.usort]
excludes = ["tests/snapshots/"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    isolated_build = True
    envlist = py310

    [tox:.package]
    basepython = python3

    [testenv]
    passenv = GITHUB_*
    deps =
        pytest
        pytest-snapshot
        ufmt>=2.0
    allowlist_externals = coverage
    commands =
        coverage run --source redox_lib_gen -m pytest -vv
"""
